--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <section id="intro" style="background-image: url('../assets/img/ein-steig.jpg');" class="intro">
+    <section id="intro" style="background-image: url('../assets/img/ein-steig.jpg');" class="intro section-padding">
       <div class="overlay"></div>
       <div class="content">
         <div class="container clearfix">
@@ -88,7 +88,7 @@
     <!-- Services end-->
 
     <!-- Portfolio / gallery-->
-    <section id="portfolio" class="gallery" style="background-color: #eee">
+    <section id="portfolio" class="gallery section-padding" style="background-color: #eee">
       <div class="container clearfix">
         <div class="row">
           <div class="col-lg-12">
@@ -102,9 +102,9 @@
 			    		</div>
 			    		<div class="col-lg-4">
 			    			<h2>Sesame Home</h2>
-			    			<p>A mobile application built to connect clients and local businesses, providing the most efficient online solution for the businesses across GTA area. Whether you’re looking for a place to live or services nearby.</p>
+			    			<p>A mobile application built to connect clients and local business, providing the most efficient online solution for the business across GTA area. Whether you’re looking for a place to live or services nearby.</p>
 			    			<h4>Technology</h4>
-			    			<p>Sesame Home is build with React Native. Integrating with the Google Maps API for businesses and services lookup. A PHP server hosted on AWS acts as a middle-man, handling backend logic and database updates. Sentry is for product error tracking.</p>
+			    			<p>Sesame Home is build with React Native. Integrating with the Google Maps API for business and service lookup. A PHP server host on AWS acts as a middle-man, handling backend logic and database updates. Sentry is for product error tracking.</p>
 			    		</div>
 		    		</div>
 		    		<div class="d-flex justify-content-center">
@@ -113,10 +113,11 @@
 		    				<img src="../assets/img/php.png" class="techlogo" width="100" height="35">
 		    				<img src="../assets/img/sentry.png" class="techlogo" width="100" height="35">
 		    				<img src="../assets/img/firebase.png" class="techlogo" width="100">
+
 		    			</div>
 		    		</div>
 		    		<div class="row text-center d-flex justify-content-center" style="margin:20px;" >
-                <button type="button" class="btn btn-success" data-target="https://gamie-io.herokuapp.com" style="width:120px">Go to app</button>
+              <button type="button" onclick="window.location.href = 'https://w3docs.com';" class="btn btn-success" style="width:120px">Go to app</button>
 	    			</div>
 					     </div>
 			       </div>
@@ -126,7 +127,7 @@
       </div>
     </section>
 
-    <section id="portfolio" class="gallery" style="background-color:white">
+    <section id="portfolio" class="gallery section-padding" style="background-color:white">
       <div class="container clearfix">
         <div class="row">
           <div class="col-lg-12">
@@ -156,7 +157,8 @@
 		    			</div>
 		    		</div>
 		    		<div class="row text-center d-flex justify-content-center" style="margin:20px;" >
-              <button type="button" class="btn btn-success" data-target="https://gamie-io.herokuapp.com" style="width:120px">Play now</button>
+              <button type="button" onclick="window.location.href = 'https://gamie-io.herokuapp.com';" class="btn btn-success" style="width:120px">Play now</button>
+
 	    			</div>
 					     </div>
 			       </div>
@@ -192,7 +194,7 @@
 		    			</div>
 		    		</div>
 		    		<div class="row text-center d-flex justify-content-center" style="margin:20px;" >
-              <button type="button" class="btn btn-success" data-target="https://www.ableoo.com" style="width:120px">Book it</button>
+              <button type="button" onclick="window.location.href = 'https://www.ableoo.com';" class="btn btn-success" style="width:120px">Book it</button>
 	    			</div>
 					     </div>
 			       </div>
