--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -117,7 +117,7 @@
 		    			</div>
 		    		</div>
 		    		<div class="row text-center d-flex justify-content-center" style="margin:20px;" >
-              <button type="button" onclick="window.location.href = 'https://w3docs.com';" class="btn btn-success" style="width:120px">Go to app</button>
+              <button type="button" onclick="window.location.href = 'https://itunes.apple.com/ca/app/sesame-home/id1374036971?mt=8';" class="btn btn-success" style="width:120px">Go to app</button>
 	    			</div>
 					     </div>
 			       </div>
