--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -88,7 +88,7 @@
     <!-- Services end-->
 
     <!-- Portfolio / gallery-->
-    <section id="portfolio" class="gallery section-padding" style="background-color: #eee">
+    <section id="portfolio" class="gallery section-padding" style="background-color: white">
       <div class="container clearfix">
         <div class="row">
           <div class="col-lg-12">
@@ -98,7 +98,7 @@
 
 			    	<div class="row work-item-row ">
 			    		<div class="col-lg-8">
-			    			<img src="../assets/img/gamie.png" class="img-responsive">
+			    			<img src="../assets/img/sesame.jpg" class="img-responsive">
 			    		</div>
 			    		<div class="col-lg-4">
 			    			<h2>Sesame Home</h2>
@@ -127,7 +127,7 @@
       </div>
     </section>
 
-    <section id="portfolio" class="gallery section-padding" style="background-color:white">
+    <section id="portfolio" class="gallery section-padding" style="background-color:#eee">
       <div class="container clearfix">
         <div class="row">
           <div class="col-lg-12">
@@ -168,7 +168,7 @@
       </div>
     </section>
 
-    <section id="portfolio" class="gallery" style="background-color: #eee">
+    <section id="portfolio" class="gallery" style="background-color: white">
       <div class="container clearfix">
         <div class="row">
           <div class="col-lg-12">
