--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
               <div class="d-flex flex-row">
                 <p class="italic p-2">Oh, hello, I'm</p>
                 <p class="italic p-2" style="color:#f442ad">Lang Wu,</p>
-                <p class="italic p-2">nice to meet your.</p>
+                <p class="italic p-2">nice to meet you.</p>
               </div>
               <h1>I'm a Mobile/Web Developer.</h1>
                 <button type="button" class="navbar-nav btn btn-danger " style="margin-top:100px">
