--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -104,7 +104,7 @@
 			    			<h2>Sesame Home</h2>
 			    			<p>A mobile application built to connect clients and local business, providing the most efficient online solution for the business across GTA area. Whether you’re looking for a place to live or services nearby.</p>
 			    			<h4>Technology</h4>
-			    			<p>Sesame Home is build with React Native. Integrating with the Google Maps API for business and service lookup. A PHP server host on AWS acts as a middle-man, handling backend logic and database updates. Sentry is for product error tracking.</p>
+			    			<p>Sesame Home is built with React Native. Integrating with the Google Maps API for business and service lookup. A PHP server host on AWS acts as a middle-man, handling backend logic and database updates. Sentry is for product error tracking.</p>
 			    		</div>
 		    		</div>
 		    		<div class="d-flex justify-content-center">
@@ -143,7 +143,7 @@
 			    			<h2>Gamie.io</h2>
 			    			<p>A Nintendo-like multi-player gaming web application.</p>
 			    			<h4>Technology</h4>
-			    			<p>Gamie.io is build with Angular2+, and uses Bootstrap for a mobile-first layout. It uses an Express/Node.js app on Heroku to handle user accounts and authentication and stores data at MongoDB.</p>
+			    			<p>Gamie.io is built with Angular2+, and uses Bootstrap for a mobile-first layout. It uses an Express/Node.js app on Heroku to handle user accounts and authentication and stores data at MongoDB.</p>
 			    		</div>
 		    		</div>
 		    		<div class="d-flex justify-content-center">
