--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -151,9 +151,9 @@
 		    				<img src="../assets/img/angular.png" class="techlogo" width="100" height="35">
 		    				<img src="../assets/img/node.png" class="techlogo" width="100" height="35">
 		    				<img src="../assets/img/mongodb.png" class="techlogo" width="100" height="35">
-		    				<img src="../assets/img/socketio.png" class="techlogo" width="100" height="35">
                 <img src="../assets/img/bootstrap.png" class="techlogo" width="100" height="35">
                 <img src="../assets/img/heroku.png" class="techlogo" width="100" height="35">
+                <img src="../assets/img/socketio.png" class="techlogo" width="100" height="35">
 		    			</div>
 		    		</div>
 		    		<div class="row text-center d-flex justify-content-center" style="margin:20px;" >
@@ -177,7 +177,7 @@
 			    <div class="col-sm-12 col-sm-offset-2">
 			    	<div class="row work-item-row ">
 			    		<div class="col-lg-8">
-			    			<img src="../assets/img/gamie.png" class="img-responsive">
+			    			<img src="../assets/img/under_cons.png" class="img-responsive">
 			    		</div>
 			    		<div class="col-lg-4">
 			    			<h2>Ableoo</h2>
